# lab06home

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  DESCRIPTION  README.md
.github/workflows/: release.yml
_CPack_Packages/Linux/DEB/solver-0.1.0.0-Linux-aarch64/: control  md5sums
_CPack_Packages/Linux/RPM/: rpmbuildsolver.err  rpmbuildsolver.out
_CPack_Packages/Linux/RPM/SPECS/: solver.spec
solver_lib/: solver.cpp
